Stripped Rust-related DLLs out of the patch zip file Initial attempt at adding plugin //References

--- a/Carbon.Core/Carbon.Extended/Carbon.Extended.csproj
+++ b/Carbon.Core/Carbon.Extended/Carbon.Extended.csproj
@@ -126,6 +126,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="OnHammerHit.cs" />
+    <Compile Include="OnItemUse.cs" />
     <Compile Include="OnLootEntityEnd.cs" />
     <Compile Include="OnLootEntity.cs" />
     <Compile Include="OnEntityDeath.cs" />
