Cancellation token NRE fix Script loader disposal error handling Renamed PluginProcessor to ScriptProcessor in CarbonCore instance Added //Require tag Added hook total time tracker

--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -39,7 +39,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'ReleaseUnix|AnyCPU'">
     <OutputPath>bin\ReleaseUnix\</OutputPath>
-    <DefineConstants>TRACE;LINUX;</DefineConstants>
+    <DefineConstants>TRACE;LINUX</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
