--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -11,7 +11,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Carbon.Core</RootNamespace>
-    <AssemblyName>Carbon1</AssemblyName>
+    <AssemblyName>Carbon</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -356,10 +356,14 @@
     <Compile Include="CarbonCorePlugin.cs" />
     <Compile Include="Carbon\CarbonPlugin.cs" />
     <Compile Include="Extensions\ConsoleArgEx.cs" />
+    <Compile Include="Extensions\CovalenceEx.cs" />
     <Compile Include="Harmony\HookExecutor.cs" />
     <Compile Include="Hooks\OnServerSave.cs" />
+    <Compile Include="Oxide\Covalence\CovalencePlugin.cs" />
+    <Compile Include="Oxide\Covalence\IPlayer.cs" />
     <Compile Include="Oxide\Extensions\HttpWebRequestExtensions.cs" />
     <Compile Include="Oxide\Hash.cs" />
+    <Compile Include="Oxide\Libraries\CommandType.cs" />
     <Compile Include="Placebo\SystemConsole.cs" />
     <Compile Include="Processors\BaseProcessor.cs" />
     <Compile Include="Processors\CarbonLoader.cs" />
@@ -406,6 +410,7 @@
     <Compile Include="Processors\HarmonyProcessor.cs" />
     <Compile Include="Processors\ScriptProcessor.cs" />
     <Compile Include="Processors\ThreadedJob.cs" />
+    <Compile Include="Processors\WebScriptProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
