Added Carbon config Added modding/non-modding Added c.loadconfig, c.saveconfig and c.modding commands

--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -357,6 +357,7 @@
     <Compile Include="Carbon\CarbonPlugin.cs" />
     <Compile Include="Extensions\ConsoleArgEx.cs" />
     <Compile Include="Extensions\CovalenceEx.cs" />
+    <Compile Include="Extensions\ServerTagEx.cs" />
     <Compile Include="Harmony\HookExecutor.cs" />
     <Compile Include="Hooks\RconCommand.cs" />
     <Compile Include="Hooks\OnServerSave.cs" />
