Fixed RconCommand arguments having a new line at the end of each Properly unload plugins with c.unload Added templates

--- a/Carbon.Core/Test/Test.csproj
+++ b/Carbon.Core/Test/Test.csproj
@@ -164,6 +164,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OxideTemplate.cs" />
+    <Compile Include="CarbonTemplate.cs" />
     <Compile Include="MuhPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
