Added CanAffordUpgrade, CanAssignBed

--- a/Carbon.Core/Carbon.Extended/Carbon.Extended.csproj
+++ b/Carbon.Core/Carbon.Extended/Carbon.Extended.csproj
@@ -135,6 +135,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Hooks\Item\CanMoveItem.cs" />
+    <Compile Include="Hooks\Player\CanAssignBed.cs" />
+    <Compile Include="Hooks\Player\CanAffordUpgrade.cs" />
     <Compile Include="Hooks\Structure\OnHammerHit.cs" />
     <Compile Include="Hooks\Item\OnItemUse.cs" />
     <Compile Include="Hooks\Player\OnLootEntityEnd.cs" />
