--- a/Carbon.Core/Carbon.Extended/Carbon.Extended.csproj
+++ b/Carbon.Core/Carbon.Extended/Carbon.Extended.csproj
@@ -136,6 +136,7 @@
   <ItemGroup>
     <Compile Include="Hooks\Item\CanMoveItem.cs" />
     <Compile Include="Hooks\Player\OnPlayerRecover_OnPlayerRecovered.cs" />
+    <Compile Include="Hooks\Player\CanLock.cs" />
     <Compile Include="Hooks\Player\OnPlayerRevive_OnHealingItemUse.cs" />
     <Compile Include="Hooks\Player\CanAssignBed.cs" />
     <Compile Include="Hooks\Player\CanAffordUpgrade.cs" />
