--- a/Carbon.Core/Carbon.Extended/Carbon.Extended.csproj
+++ b/Carbon.Core/Carbon.Extended/Carbon.Extended.csproj
@@ -135,6 +135,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Hooks\Item\CanMoveItem.cs" />
+    <Compile Include="Hooks\Player\OnMeleeAttack.cs" />
     <Compile Include="Hooks\Player\OnPlayerRecover_OnPlayerRecovered.cs" />
     <Compile Include="Hooks\Player\CanLock.cs" />
     <Compile Include="Hooks\Player\OnPlayerRevive_OnHealingItemUse.cs" />
