--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -354,6 +354,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CarbonCorePlugin.cs" />
+    <Compile Include="Carbon\CarbonHook.cs" />
     <Compile Include="Carbon\CarbonPlugin.cs" />
     <Compile Include="Extensions\ConsoleArgEx.cs" />
     <Compile Include="Extensions\CovalenceEx.cs" />
