--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -355,6 +355,7 @@
   <ItemGroup>
     <Compile Include="CarbonCorePlugin.cs" />
     <Compile Include="Carbon\CarbonHook.cs" />
+    <Compile Include="Hooks\ServerConsoleLog.cs" />
     <Compile Include="Processors\CarbonAddonProcessor.cs" />
     <Compile Include="Carbon\CarbonPlugin.cs" />
     <Compile Include="Extensions\ConsoleArgEx.cs" />
