--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -358,7 +358,10 @@
   <ItemGroup>
     <Compile Include="CarbonCorePlugin.cs" />
     <Compile Include="Carbon\CarbonHook.cs" />
+    <Compile Include="Extensions\ItemContainerEx.cs" />
     <Compile Include="Hooks\ServerConsoleLog.cs" />
+    <Compile Include="Patches\GetAmountSkinPatch.cs" />
+    <Compile Include="Patches\TakeItemSkinPatch.cs" />
     <Compile Include="Processors\CarbonAddonProcessor.cs" />
     <Compile Include="Carbon\CarbonPlugin.cs" />
     <Compile Include="Extensions\ConsoleArgEx.cs" />
