Added OnEntitySpawn, OnEntitySpawned hooks Added Init() hook Remove test project

--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -360,6 +360,8 @@
     <Compile Include="Carbon\CarbonHook.cs" />
     <Compile Include="Extensions\ItemContainerEx.cs" />
     <Compile Include="Hooks\Core\ServerConsoleLog.cs" />
+    <Compile Include="Hooks\Oxide\Entity\OnEntitySpawned.cs" />
+    <Compile Include="Hooks\Carbon\Entity\OnEntitySpawn.cs" />
     <Compile Include="Hooks\Oxide\Entity\OnEntityDeath.cs" />
     <Compile Include="Hooks\Oxide\Item\CanDropActiveItem.cs" />
     <Compile Include="Hooks\Oxide\Item\CanMoveItem.cs" />
